// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bidirectional Both empty 1`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Bidirectional Both match 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          1179618779,
        ],
        "t2": [
          "Hc2DO@200008DKS9",
          {
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          3211305032,
        ],
      },
      3644316511,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          1,
          2771101213,
        ],
        "v2": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1480624617,
    ],
  ],
  2172080822,
]
`;

exports[`Bidirectional different cell 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@400015DK@@",
          {
            "r1": [
              "Hc2DO@400015DK@@",
              {
                "c1": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              3680338027,
            ],
          },
          2662597840,
        ],
      },
      2040235603,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2040235603,
]
`;

exports[`Bidirectional different row 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@400015DK@@",
          {
            "r1": [
              "Hc2DO@400015DK@@",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              3518075942,
            ],
          },
          4196389944,
        ],
      },
      3846307195,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3846307195,
]
`;

exports[`Bidirectional different table 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@400015DK@@",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@400015DK@@",
              {
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              1405859921,
            ],
          },
          2464586850,
        ],
      },
      232363784,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  232363784,
]
`;

exports[`Bidirectional different tables 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          1179618779,
        ],
        "t2": [
          "Hc2DO@400015DK@@",
          {
            "r2": [
              "Hc2DO@400015DK@@",
              {
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              1405859921,
            ],
          },
          1807856113,
        ],
      },
      3632778525,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3632778525,
]
`;

exports[`Bidirectional different value 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@400015DK@@",
      {
        "v1": [
          "Hc2DO@400015DK@@",
          2,
          1834230558,
        ],
      },
      3198907265,
    ],
  ],
  3198907265,
]
`;

exports[`Bidirectional different values 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@400015DK@@",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          1,
          2771101213,
        ],
        "v2": [
          "Hc2DO@400015DK@@",
          2,
          1834230558,
        ],
      },
      2168283134,
    ],
  ],
  2168283134,
]
`;

exports[`Bidirectional store1 empty 1`] = `
[
  "Hc2DO@200005DK@@",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@200005DK@@",
                  1,
                  3718299866,
                ],
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              1232861615,
            ],
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          1678519644,
        ],
        "t2": [
          "Hc2DO@200005DK@@",
          {
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          4120628563,
        ],
      },
      1706545122,
    ],
    [
      "Hc2DO@200005DK@@",
      {
        "v1": [
          "Hc2DO@200005DK@@",
          1,
          3718299866,
        ],
        "v2": [
          "Hc2DO@200005DK@@",
          2,
          1097701853,
        ],
      },
      2798260479,
    ],
  ],
  3279806237,
]
`;

exports[`Bidirectional store1 missing cell 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@400015DK@@",
          {
            "r1": [
              "Hc2DO@400015DK@@",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              3518075942,
            ],
          },
          4196389944,
        ],
      },
      3846307195,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3846307195,
]
`;

exports[`Bidirectional store1 missing row 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@400015DK@@",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@400015DK@@",
              {
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              1405859921,
            ],
          },
          2464586850,
        ],
      },
      232363784,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  232363784,
]
`;

exports[`Bidirectional store1 missing table 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          1179618779,
        ],
        "t2": [
          "Hc2DO@400015DK@@",
          {
            "r2": [
              "Hc2DO@400015DK@@",
              {
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              1405859921,
            ],
          },
          1807856113,
        ],
      },
      3632778525,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3632778525,
]
`;

exports[`Bidirectional store1 missing tables 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@400015DK@@",
      {
        "t1": [
          "Hc2DO@400015DK@@",
          {
            "r1": [
              "Hc2DO@400015DK@@",
              {
                "c1": [
                  "Hc2DO@400015DK@@",
                  1,
                  2439471441,
                ],
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              569699930,
            ],
            "r2": [
              "Hc2DO@400015DK@@",
              {
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              1405859921,
            ],
          },
          1886415985,
        ],
        "t2": [
          "Hc2DO@400015DK@@",
          {
            "r2": [
              "Hc2DO@400015DK@@",
              {
                "c2": [
                  "Hc2DO@400015DK@@",
                  2,
                  1834230558,
                ],
              },
              1405859921,
            ],
          },
          1807856113,
        ],
      },
      3378572590,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          1,
          2771101213,
        ],
        "v2": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1480624617,
    ],
  ],
  2434819271,
]
`;

exports[`Bidirectional store1 missing value 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@400015DK@@",
      {
        "v1": [
          "Hc2DO@400015DK@@",
          1,
          2439471441,
        ],
        "v2": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      3558906081,
    ],
  ],
  3558906081,
]
`;

exports[`Bidirectional store1 missing values 1`] = `
[
  "Hc2DO@400015DK@@",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          1179618779,
        ],
        "t2": [
          "Hc2DO@200008DKS9",
          {
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          3211305032,
        ],
      },
      3644316511,
    ],
    [
      "Hc2DO@400015DK@@",
      {
        "v1": [
          "Hc2DO@400015DK@@",
          1,
          2439471441,
        ],
        "v2": [
          "Hc2DO@400015DK@@",
          2,
          1834230558,
        ],
      },
      1045993258,
    ],
  ],
  3882830965,
]
`;

exports[`Bidirectional store2 empty 1`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@200008DKS9",
      {
        "t1": [
          "Hc2DO@200008DKS9",
          {
            "r1": [
              "Hc2DO@200008DKS9",
              {
                "c1": [
                  "Hc2DO@200008DKS9",
                  1,
                  2771101213,
                ],
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              3105465029,
            ],
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          1179618779,
        ],
        "t2": [
          "Hc2DO@200008DKS9",
          {
            "r2": [
              "Hc2DO@200008DKS9",
              {
                "c2": [
                  "Hc2DO@200008DKS9",
                  2,
                  1735757618,
                ],
              },
              996380338,
            ],
          },
          3211305032,
        ],
      },
      3644316511,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          1,
          2771101213,
        ],
        "v2": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1480624617,
    ],
  ],
  2172080822,
]
`;

exports[`Bidirectional store2 missing cell 1`] = `
[
  "Hc2DO@400018DKS9",
  [
    [
      "Hc2DO@400018DKS9",
      {
        "t1": [
          "Hc2DO@400018DKS9",
          {
            "r1": [
              "Hc2DO@400018DKS9",
              {
                "c1": [
                  "Hc2DO@200005DK@@",
                  1,
                  3718299866,
                ],
                "c2": [
                  "Hc2DO@400018DKS9",
                  2,
                  3121270889,
                ],
              },
              2438945377,
            ],
          },
          633466809,
        ],
      },
      64304582,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  64304582,
]
`;

exports[`Bidirectional store2 missing row 1`] = `
[
  "Hc2DO@400018DKS9",
  [
    [
      "Hc2DO@400018DKS9",
      {
        "t1": [
          "Hc2DO@400018DKS9",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@200005DK@@",
                  1,
                  3718299866,
                ],
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              1232861615,
            ],
            "r2": [
              "Hc2DO@400018DKS9",
              {
                "c2": [
                  "Hc2DO@400018DKS9",
                  2,
                  3121270889,
                ],
              },
              1692905676,
            ],
          },
          443582196,
        ],
      },
      4027746679,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4027746679,
]
`;

exports[`Bidirectional store2 missing table 1`] = `
[
  "Hc2DO@400018DKS9",
  [
    [
      "Hc2DO@400018DKS9",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@200005DK@@",
                  1,
                  3718299866,
                ],
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              1232861615,
            ],
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          1678519644,
        ],
        "t2": [
          "Hc2DO@400018DKS9",
          {
            "r2": [
              "Hc2DO@400018DKS9",
              {
                "c2": [
                  "Hc2DO@400018DKS9",
                  2,
                  3121270889,
                ],
              },
              1692905676,
            ],
          },
          2347198203,
        ],
      },
      1536860168,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  1536860168,
]
`;

exports[`Bidirectional store2 missing tables 1`] = `
[
  "Hc2DO@400018DKS9",
  [
    [
      "Hc2DO@400018DKS9",
      {
        "t1": [
          "Hc2DO@400018DKS9",
          {
            "r1": [
              "Hc2DO@400018DKS9",
              {
                "c1": [
                  "Hc2DO@400018DKS9",
                  1,
                  3158873486,
                ],
                "c2": [
                  "Hc2DO@400018DKS9",
                  2,
                  3121270889,
                ],
              },
              248400647,
            ],
            "r2": [
              "Hc2DO@400018DKS9",
              {
                "c2": [
                  "Hc2DO@400018DKS9",
                  2,
                  3121270889,
                ],
              },
              1692905676,
            ],
          },
          2553492524,
        ],
        "t2": [
          "Hc2DO@400018DKS9",
          {
            "r2": [
              "Hc2DO@400018DKS9",
              {
                "c2": [
                  "Hc2DO@400018DKS9",
                  2,
                  3121270889,
                ],
              },
              1692905676,
            ],
          },
          2347198203,
        ],
      },
      3067725528,
    ],
    [
      "Hc2DO@200005DK@@",
      {
        "v1": [
          "Hc2DO@200005DK@@",
          1,
          3718299866,
        ],
        "v2": [
          "Hc2DO@200005DK@@",
          2,
          1097701853,
        ],
      },
      2798260479,
    ],
  ],
  269735463,
]
`;

exports[`Bidirectional store2 missing value 1`] = `
[
  "Hc2DO@400018DKS9",
  [
    [
      "",
      {},
      0,
    ],
    [
      "Hc2DO@400018DKS9",
      {
        "v1": [
          "Hc2DO@400018DKS9",
          1,
          3158873486,
        ],
        "v2": [
          "Hc2DO@200005DK@@",
          2,
          1097701853,
        ],
      },
      318127781,
    ],
  ],
  318127781,
]
`;

exports[`Bidirectional store2 missing values 1`] = `
[
  "Hc2DO@400018DKS9",
  [
    [
      "Hc2DO@200005DK@@",
      {
        "t1": [
          "Hc2DO@200005DK@@",
          {
            "r1": [
              "Hc2DO@200005DK@@",
              {
                "c1": [
                  "Hc2DO@200005DK@@",
                  1,
                  3718299866,
                ],
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              1232861615,
            ],
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          1678519644,
        ],
        "t2": [
          "Hc2DO@200005DK@@",
          {
            "r2": [
              "Hc2DO@200005DK@@",
              {
                "c2": [
                  "Hc2DO@200005DK@@",
                  2,
                  1097701853,
                ],
              },
              3166900994,
            ],
          },
          4120628563,
        ],
      },
      1706545122,
    ],
    [
      "Hc2DO@400018DKS9",
      {
        "v1": [
          "Hc2DO@400018DKS9",
          1,
          3158873486,
        ],
        "v2": [
          "Hc2DO@400018DKS9",
          2,
          3121270889,
        ],
      },
      3220709211,
    ],
  ],
  3662663865,
]
`;

exports[`Unidirectional autoLoad1 but not autoSave2, defaults 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              3462856275,
            ],
          },
          1034923531,
        ],
      },
      1374923724,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v0": [
          "Hc2DO@000008DKS9",
          0,
          2614692414,
        ],
      },
      507814229,
    ],
  ],
  1337395865,
]
`;

exports[`Unidirectional autoLoad1 but not autoSave2, defaults 2`] = `
[
  "Hc2DO@000005DK@@",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  2424293582,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional autoSave1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;

exports[`Unidirectional load1 but not autoSave2, defaults 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t0": [
          "Hc2DO@000008DKS9",
          {
            "r0": [
              "Hc2DO@000008DKS9",
              {
                "c0": [
                  "Hc2DO@000008DKS9",
                  0,
                  2614692414,
                ],
              },
              3462856275,
            ],
          },
          1034923531,
        ],
      },
      1374923724,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v0": [
          "Hc2DO@000008DKS9",
          0,
          2614692414,
        ],
      },
      507814229,
    ],
  ],
  1337395865,
]
`;

exports[`Unidirectional load1 but not autoSave2, defaults 2`] = `
[
  "Hc2DO@000005DK@@",
  [
    [
      "Hc2DO@000005DK@@",
      {
        "t1": [
          "Hc2DO@000005DK@@",
          {
            "r1": [
              "Hc2DO@000005DK@@",
              {
                "c1": [
                  "Hc2DO@000005DK@@",
                  1,
                  1915036128,
                ],
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              33786990,
            ],
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          3344002712,
        ],
        "t2": [
          "Hc2DO@000005DK@@",
          {
            "r2": [
              "Hc2DO@000005DK@@",
              {
                "c2": [
                  "Hc2DO@000005DK@@",
                  2,
                  2554361111,
                ],
              },
              3049305030,
            ],
          },
          1360887207,
        ],
      },
      2945952928,
    ],
    [
      "Hc2DO@000005DK@@",
      {
        "v1": [
          "Hc2DO@000005DK@@",
          1,
          1915036128,
        ],
        "v2": [
          "Hc2DO@000005DK@@",
          2,
          2554361111,
        ],
      },
      1072194670,
    ],
  ],
  2424293582,
]
`;

exports[`Unidirectional save1 but not autoLoad2 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              922886432,
            ],
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          1784087264,
        ],
        "t2": [
          "Hc2DO@000008DKS9",
          {
            "r2": [
              "Hc2DO@000008DKS9",
              {
                "c2": [
                  "Hc2DO@000008DKS9",
                  2,
                  903550280,
                ],
              },
              4100269854,
            ],
          },
          4279580014,
        ],
      },
      3499952990,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
        "v2": [
          "Hc2DO@000008DKS9",
          2,
          903550280,
        ],
      },
      1248113522,
    ],
  ],
  2600056876,
]
`;

exports[`Unidirectional save1 but not autoLoad2 2`] = `
[
  "",
  [
    [
      "",
      {},
      0,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  0,
]
`;
